--- a/paper/main.tex
+++ b/paper/main.tex
@@ -290,7 +290,7 @@ Smash++ works on the basis of cooperation between finite-context models (FCMs) a
 
 \begin{figure}[!t]
   \centering
-  \includegraphics[width=\linewidth]{data_model.pdf}
+  \includegraphics[width=\columnwidth]{data_model.pdf}
   \caption{Data modelling by Smash++. (a) cooperation between finite-context models (FCMs) and substitutional-tolerant Markov models (STMMs). Note that each STMM needs to be associated with an FCM. (b) probability of an input symbol is estimated by employing the probability and weight values that have been obtained from processing previous symbols.}
   \label{fig.model}
 \end{figure}
@@ -356,8 +356,7 @@ This example shows the distinction between a finite-context model and a substitu
 
  \begin{figure*}[!h]
    \centering
-   \includegraphics[width=\linewidth]{data_struct.pdf}
-  %  \includegraphics[width=.7\linewidth]{data_struct.pdf}
+   \includegraphics[width=.8\linewidth]{data_struct.pdf}
    \caption{The data structures used by Smash++ to store the models in memory. (a) table of 64~bit counters that uses up to 128~MB of memory, (b) table of 32~bit counters that consumes at most 960~MB of memory, (c) table of 8~bit approximate counters with memory usage of up to 1~GB and (d) Count-Min-Log sketch of 4~bit counters which consumes up to $\frac{1}{2} w\times d$~B of memory, e.g., if $w=2^{30}$ and $d=4$, it uses 2~GB of memory.}
    \label{fig.struct}
  \end{figure*}
@@ -476,8 +475,7 @@ This example shows the distinction between a finite-context model and a substitu
 
  \begin{figure}[!h]
    \centering
-   \includegraphics[width=\linewidth]{simil.pdf}
-  %  \includegraphics[width=.7\linewidth]{simil.pdf}
+   \includegraphics[width=\columnwidth]{simil.pdf}
    \caption{Finding similar regions in reference and target sequences. Smash++ finds, first, the regions in the target that are similar to the reference, and then, finds the regions in the reference that are similar to the detected target regions. This procedure is performance for both regular and inverted homologies.}
    \label{fig.simil}
  \end{figure}
