--- a/paper/main.tex
+++ b/paper/main.tex
@@ -73,75 +73,17 @@ Keyword1; keyword 2; keyword 3 (Three to ten keywords representing the main cont
 \end{itemize}
 \end{keypoints*}
 
-\section{Introduction to this Template}
+\section{Introduction}
+Genome rearrangements are mutations that alter the arrangement of genes on a genome, and usually occur in presence of errors in cell division following meiosis or mitosis.
+These structural abnormalities in chromosomes include, but are not limited to, translocations, inversions, fissions and fusions, and mostly occur as an accident in the sperm or egg cell, and hence are present in every cell of the body~\cite{hartmann2018genome,gardner2018gardner}.
 
-\begin{epigraph}{Epigraph source name}
-This is the epigraph text, should you like to add one. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-\end{epigraph}
-
-This is the \LaTeX{} template for GigaScience journal manuscript submissions. \textbf{Please note that whilst this template provides a preview of the typeset manuscript for submission, it will not necessarily be the final publication layout.}
-
-There are important commands in the preamble that you will need to modify for your own manuscript. If you are using this template on Overleaf, please switch the editor to Source code mode to view them; or if you prefer to stay in the Rich Text view, click on the title in the Rich Text view to display the preamble code.
-
-Use the \verb|\journal{...}| command in the preamble so that the correct journal name, logo and colours are loaded automatically. \textbf{Only certain journals and options are supported at this time;} check with your journal's editorial office if your journal is supported.
-
-Alternatively you can re-define \verb|\jname|, \verb|\jlogo| and the \verb|jcolour| explicitly, though check with your journal's editorial office to confirm that this is appropriate.
-
-Specify your manuscript's category with the \verb|\papercat{...}| command in the preamble.
-
-See the sample code in the preamble for a sample of how author and affiliation information can be specified.
-
-Use later sections starting with `Background' on page~\pageref{sec:background} to write your manuscript. The remainder of this current section will provide some sample \LaTeX{} code for various elements you may want to include in your manuscript.
-
-\subsection{Sectional Headings}
-You can use \verb|\section{...}|, \verb|\subsection{...}| commands to add more sections and subsections to your manuscript. Further sectional levels are provided by \verb|\subsubsection|, \verb|\paragraph| and \verb|\subparagraph|.
-
-\subsection{Citations and References}
-Use the \verb|num-refs| document class option for numerical citations, and \verb|alph-refs| option for author-year citations.
-Use the \verb|\citep| command for parenthetical citations, and \verb|\citet| command for text citations (when using \verb|alpha-refs|).
-This is a citation: \citep{Fan:2004} and here are two more: \citep{Cox:1972,Hear:Holm:Step:quan:2006}.
-
-% \begin{quote}
-% This is a quote. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-% \end{quote}
-
-\begin{itemize}
-\item This is a bullet list.
-\item Another point.
-\item A third point.
-\end{itemize}
-
-This\footnote{This is the footnote text. This is the footnote text. This is the footnote text. This is the footnote text. This is the footnote text.} is a footnote. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-
-\begin{itemize}
-\item This is a numbered list.
-\item Another point.
-\item A third point.
-\end{itemize}
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+Study on chromosomal aberrations, which underlie many genetic diseases and cancer, is crucial for diagnostics, prognostics and targeted therapeutics. Examples of such diseases are Wolf–Hirschhorn syndrome (WHS), that is caused by a partial deletion from human chromosome location 4p16.3~\cite{dufke2000microdeletion}, Charcot–Marie–Tooth disease (CMT), that is most commonly caused by duplication of the gene encoding peripheral myelin protein 22 (PMP22) on human chromosome 17~\cite{timmerman1992peripheral}, Acute myeloid leukemia (AML), that may be caused by translocations between human chromosome 8 and 21~\cite{huang2006acute}.
 
 
-\subsubsection{This is a 3rd level heading}
 
-Use \verb|\subsubsection| to get a 3rd level heading.
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-
-
-\paragraph{This is a 4th level heading}
-
-Use \verb|\paragraph| to get a 4th level heading.
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-
-\subparagraph{This is a 5th level heading}
-
-Use \verb|\subparagraph| to get a 5th level heading.
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 
 
 \subsection{Figures and Tables}
-Figures and tables can be added with the usual \verb|figure| and \verb|table| environments, e.g.~Figure \ref{fig:example} and Table \ref{tab:example}. Use \verb|figure*| and \verb|table*| if you need a two-column wide figure or table, as in Figure \ref{fig:example:wide} and Table \ref{tab:example:wide}. 
-
 If you have a very wide table or figure, you can use \texttt{sidewaystable} or \texttt{sidewaysfigure}, as in Table \ref{tab:example:sideways}: this will be rotated sideways and occupy a \emph{single column} on its own.
 
 If your table or figure is both wide and tall (so it wouldn't fit well in a single column with \texttt{sidewaystable} or \texttt{figure}), 
@@ -566,7 +508,8 @@ A list of available scientific research data repositories can be found in \href{
 \section{Declarations}
 
 \subsection{List of abbreviations}
-CMLS: Count-Min-Log Sketch; CPU: central processing unit; FCM: finite-context model; GB: gigabyte; GHz: gigahertz; KB: kilobyte; MB: megabyte; RAM: random access memory; PRNG: pseudo-random number generator; STMM: substitutional tolerant Markov model.
+AML: acute myeloid leukemia; CMT: Charcot–Marie–Tooth; CMLS: Count-Min-Log Sketch; CPU: central processing unit; FCM: finite-context model; GB: gigabyte; GHz: gigahertz; KB: kilobyte; MB: megabyte; RAM: random access memory; PMP22: peripheral myelin protein 22; PRNG: pseudo-random number generator; STMM: substitutional tolerant Markov model; WHS: Wolf–Hirschhorn syndrome.
+
 
 \subsection{Ethical Approval (optional)}
 Manuscripts reporting studies involving human participants, human data or human tissue must:
