--- a/paper/paper-refs.bib
+++ b/paper/paper-refs.bib
@@ -102,22 +102,22 @@ doi="10.1007/s12539-019-00322-1"
 }
 
 @article{morris1978counting,
- author = {Morris, Robert},
- title = {Counting Large Numbers of Events in Small Registers},
- journal = {Commun. ACM},
- //issue_date = {Oct. 1978},
- volume = {21},
- number = {10},
- //month = oct,
- year = {1978},
- //issn = {0001-0782},
- pages = {840--842},
- //numpages = {3},
- //url = {http://doi.acm.org/10.1145/359619.359627},
- //doi = {10.1145/359619.359627},
- //acmid = {359627},
- publisher = {ACM},
- //address = {New York, NY, USA}
+  author = {Morris, Robert},
+  title = {Counting Large Numbers of Events in Small Registers},
+  journal = {Commun. ACM},
+  //issue_date = {Oct. 1978},
+  volume = {21},
+  number = {10},
+  //month = oct,
+  year = {1978},
+  //issn = {0001-0782},
+  pages = {840--842},
+  //numpages = {3},
+  //url = {http://doi.acm.org/10.1145/359619.359627},
+  //doi = {10.1145/359619.359627},
+  //acmid = {359627},
+  publisher = {ACM},
+  //address = {New York, NY, USA}
 }
 
 @inproceedings{pitel2015count,
@@ -168,51 +168,94 @@ doi="10.1007/s12539-019-00322-1"
 }
 
 @article{zenil2015two,
- title = {Two-dimensional {Kolmogorov} complexity and an empirical validation of the {Coding} theorem method by compressibility},
- author = {Zenil, Hector and Soler-Toscano, Fernando and Delahaye, Jean-Paul and Gauvrit, Nicolas},
- year = 2015,
- month = sep,
- volume = 1,
- pages = {e23},
- journal = {PeerJ Computer Science},
- issn = {2376-5992},
- doi = {10.7717/peerj-cs.23}
+title = {Two-dimensional {Kolmogorov} complexity and an empirical validation of the {Coding} theorem method by compressibility},
+author = {Zenil, Hector and Soler-Toscano, Fernando and Delahaye, Jean-Paul and Gauvrit, Nicolas},
+year = 2015,
+month = sep,
+volume = 1,
+pages = {e23},
+journal = {PeerJ Computer Science},
+issn = {2376-5992},
+doi = {10.7717/peerj-cs.23}
 }
 
 @article{antao2018kolmogorov,
-author={Ant{\~a}o, R{\'o}mulo and Mota, Alexandre and Machado, J. A. Tenreiro},
-title="Kolmogorov complexity as a data similarity metric: application in mitochondrial {DNA}",
-journal="Nonlinear Dynamics",
-year="2018",
-month="Aug",
-day="01",
-volume="93",
-number="3",
-pages="1059--1071",
-issn="1573-269X",
-doi="10.1007/s11071-018-4245-7"
+  author={Ant{\~a}o, R{\'o}mulo and Mota, Alexandre and Machado, J. A. Tenreiro},
+  title="Kolmogorov complexity as a data similarity metric: application in mitochondrial {DNA}",
+  journal="Nonlinear Dynamics",
+  year="2018",
+  month="Aug",
+  day="01",
+  volume="93",
+  number="3",
+  pages="1059--1071",
+  issn="1573-269X",
+  doi="10.1007/s11071-018-4245-7"
 }
 
 @article{faloutsos2007on,
-author="Faloutsos, Christos and Megalooikonomou, Vasileios",
-title="On data mining, compression, and Kolmogorov complexity",
-journal="Data Mining and Knowledge Discovery",
-year="2007",
-month="Aug",
-day="01",
-volume="15",
-number="1",
-pages="3--20",
-issn="1573-756X",
-doi="10.1007/s10618-006-0057-3"
+  author="Faloutsos, Christos and Megalooikonomou, Vasileios",
+  title="On data mining, compression, and Kolmogorov complexity",
+  journal="Data Mining and Knowledge Discovery",
+  year="2007",
+  month="Aug",
+  day="01",
+  volume="15",
+  number="1",
+  pages="3--20",
+  issn="1573-756X",
+  doi="10.1007/s10618-006-0057-3"
 }
 
+@incollection{hartmann2018genome,
+  title={Genome Rearrangement Analysis: Cut and Join Genome Rearrangements and Gene Cluster Preserving Approaches},
+  author={Hartmann, Tom and Middendorf, Martin and Bernt, Matthias},
+  booktitle={Comparative Genomics},
+  pages={261--289},
+  year={2018},
+  publisher={Springer}
+}
 
+@book{gardner2018gardner,
+  title={{Gardner} and {Sutherland's} Chromosome Abnormalities and Genetic Counseling},
+  author={Gardner, RJM and Gardner, RJ McKinlay and Amor, David J},
+  number={70},
+  year={2018},
+  publisher={Oxford University Press}
+}
 
+@article{dufke2000microdeletion,
+  title={Microdeletion 4p16.3 in three unrelated patients with {Wolf-Hirschhorn} syndrome},
+  author={Dufke, A and Seidel, J and Sch{\"o}ning, M and D{\"o}bler-Neumann, M and Kelbova, C and Liehr, T and Beensen, V and Backsch, C and Klein-Vogler, U and Enders, H},
+  journal={Cytogenetic and Genome Research},
+  volume={91},
+  number={1-4},
+  pages={81--84},
+  year={2000},
+  publisher={Karger Publishers}
+}
 
+@article{timmerman1992peripheral,
+  title={The peripheral myelin protein gene {PMP--22} is contained within the {Charcot--Marie--Tooth} disease type {1A} duplication},
+  author={Timmerman, V and Nelis, E and Van Hul, W and Nieuwenhuijsen, BW and Chen, KL and Wang, S and Othman, K Ben and Cullen, B and Leach, Robin J and Hanemann, CO and others},
+  journal={Nature genetics},
+  volume={1},
+  number={3},
+  pages={171},
+  year={1992},
+  publisher={Nature Publishing Group}
+}
 
-
-
+@article{huang2006acute,
+  title={Acute myeloid leukemia associated with variant t(8;21) detected by conventional cytogenetic and molecular studies: a report of four cases and review of the literature},
+  author={Huang, Li and Abruzzo, Lynne V and Valbuena, Jose R and Medeiros, L Jeffrey and Lin, Pei},
+  journal={American journal of clinical pathology},
+  volume={125},
+  number={2},
+  pages={267--272},
+  year={2006},
+  publisher={Oxford University Press Oxford, UK}
+}
 
 
 
