--- a/paper/paper-refs.bib
+++ b/paper/paper-refs.bib
@@ -257,6 +257,46 @@ doi = {10.7717/peerj-cs.23}
   publisher={Oxford University Press Oxford, UK}
 }
 
+@article{theisen2010disorders,
+  title={Disorders caused by chromosome abnormalities},
+  author={Theisen, Aaron and Shaffer, Lisa G},
+  journal={The application of clinical genetics},
+  volume={3},
+  pages={159},
+  year={2010},
+  publisher={Dove Press}
+}
+
+@article{reuter2015high,
+  title = "High-Throughput Sequencing Technologies",
+  author = "Jason A. Reuter and Damek V. Spacek and Michael P. Snyder",
+  journal = "Molecular Cell",
+  volume = "58",
+  number = "4",
+  pages = "586--597",
+  year = "2015"
+}
+
+@article{villamor2019high,
+  author = {Villamor, D. E. V. and Ho, T. and Al Rwahnih, M. and Martin, R. R. and Tzanetakis, I. E.},
+  title = {High Throughput Sequencing For Plant Virus Detection and Discovery},
+  journal = {Phytopathology},
+  volume = {109},
+  number = {5},
+  pages = {716--725},
+  year = {2019},
+}
+
+@article{rego2019high,
+  title={High Throughput Sequencing and Assessing Disease Risk},
+  author={Rego, Shannon M and Snyder, Michael P},
+  journal={Cold Spring Harbor perspectives in medicine},
+  volume={9},
+  number={1},
+  pages={a026849},
+  year={2019},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
 
 
 
