--- a/paper/main.tex
+++ b/paper/main.tex
@@ -74,7 +74,10 @@ Keyword1; keyword 2; keyword 3 (Three to ten keywords representing the main cont
 \end{keypoints*}
 
 \section{Introduction}
-With ever-increasing development of high-throughput sequencing (HTS) technologies, a massive amount of genomic information is produced at much higher speed, better quality and lower cost than was possible before~\cite{reuter2015high}. Analyses of such information has led to the advancement of our understanding of biology and disease~\cite{villamor2019high,rego2019high}.
+With ever-increasing development of high-throughput sequencing (HTS) technologies, a massive amount of genomic information is produced at much higher speed, better quality and lower cost than was possible before~\cite{reuter2015high}. Analyses of such information by means of computational solutions has led to the advancement of our understanding of biology and disease, over the past decade~\cite{villamor2019high,rego2019high}.
+
+% Computational solutions have facilitated analyzing this data deluge.
+% Computational approaches play a key role in analyzing this data deluge.
 
 Genome rearrangements are mutations that alter the arrangement of genes on a genome, and usually occur in presence of errors in cell division following meiosis or mitosis. These structural abnormalities in chromosomes include, but are not limited to, deletions, duplications, translocations, inversions and insertions, and mostly occur as an accident in the sperm or egg cell, and hence are present in every cell of the body~\cite{hartmann2018genome,gardner2018gardner}.
 
