--- a/paper/main.tex
+++ b/paper/main.tex
@@ -82,7 +82,7 @@ Study on chromosomal aberrations, which underlie many genetic diseases and cance
 
 We present an alignment-free method that finds chromosomal rearrangements between two DNA sequences based on their information content, which is obtained by a data compression technique. This computational solution follows a combination of probabilistic and algorithmic approaches for having a quantitative definition of information, although it can be seen as more of a probabilistic one~\cite{hosseini2019ac}. The proposed method is implemented, under the name of Smash++, and is capable of finding and visualizing informationally similar regions in an SVG image.
 
-Smash++ is an improved version of Smash~\cite{pratas2015alignment}, featuring (1)~improved accuracy, that is using multiple context models to find fine-grained along with coarse-grained chromosomal rearrangements, (2)~presenting complexity (redundancy) and relative redundancy of informationally similar regions in DNA sequences, (3)~improved user interface (UI), both in command line and resulting SVG image, and (4)~improved performance, employing thread parallelism.
+Smash++ is an improved version of Smash~\cite{pratas2015alignment}, featuring (1)~improved accuracy, that is using multiple context models to find fine-grained along with coarse-grained chromosomal rearrangements, (2)~presenting complexity (redundancy) and relative redundancy of informationally similar regions in DNA sequences, (3)~improved user interface (UI), both in command line and resulting SVG image, and (4)~improved performance, in terms of time and memory usage.
 
 
 \subsection{Figures and Tables}
