--- a/paper/main.tex
+++ b/paper/main.tex
@@ -480,15 +480,15 @@ Smash++ and several other methods have been carried out on a collection of synth
 
 % Authors benefit greatly by posting their methods in protocols.io as these are in a formatted form, allow inclusion of all the details, are fully searchable unlike supplementary files, and can be updated to new versions as basic methodology changes over time. Doing this saves authors extensive time in the future as the methods do not need to be rewritten in future manuscripts as they need only be cited.
 
-\section{Availability of source code and requirements (optional, if code is present)}
+\section{Availability of source code and requirements}
 
 Lists the following:
 \begin{itemize}
 \item Project name: e.g.~My bioinformatics project
 \item Project home page: e.g.~\url{http://sourceforge.net/projects/mged}
 \item Operating system(s): e.g.~Platform independent
-\item Programming language: e.g.~Java
-\item Other requirements: e.g.~Java 1.3.1 or higher, Tomcat 4.0 or higher
+\item Programming language: e.g.~C++
+\item Other requirements: e.g.~C++ 11 or higher, Tomcat 4.0 or higher
 \item License: e.g.~GNU GPL, FreeBSD etc.
 Any restrictions to use by non-academics: e.g. licence needed
 \end{itemize}
@@ -510,7 +510,7 @@ A list of available scientific research data repositories can be found in \href{
 \section{Declarations}
 
 \subsection{List of abbreviations}
-AML:~acute myeloid leukemia; CMT:~Charcot–Marie–Tooth; CMLS:~Count-Min-Log Sketch; CPU:~central processing unit; FCM:~finite-context model; GB:~gigabyte; GHz:~gigahertz; HTS:~high-throughput sequencing; KB:~kilobyte; MB:~megabyte; RAM:~random access memory; PMP22:~peripheral myelin protein 22; PRNG:~pseudo-random number generator; STMM:~substitutional tolerant Markov model; UI:~user interface; WHS:~Wolf–Hirschhorn syndrome.
+AML:~acute myeloid leukemia; CMT:~Charcot–Marie–Tooth; CMLS:~Count-Min-Log Sketch; CPU:~central processing unit; FCM:~finite-context model; GB:~gigabyte; GHz:~gigahertz; HTS:~high-throughput sequencing; KB:~kilobyte; MB:~megabyte; RAM:~random access memory; PMP22:~peripheral myelin protein 22; PRNG:~pseudo-random number generator; STMM:~substitutional tolerant Markov model; SVG:~Scalable Vector Graphics; UI:~user interface; WHS:~Wolf–Hirschhorn syndrome.
 
 
 \subsection{Ethical Approval (optional)}
