--- a/paper/main.tex
+++ b/paper/main.tex
@@ -73,114 +73,28 @@ Keyword1; keyword 2; keyword 3 (Three to ten keywords representing the main cont
 \end{itemize}
 \end{keypoints*}
 
-\section{Introduction}
+\section{Background}
 With ever-increasing development of high-throughput sequencing (HTS) technologies, a massive amount of genomic information is produced at much higher speed, better quality and lower cost than was possible before~\cite{reuter2015high}. Analyses of such information has led to the advancement of our understanding of biology and disease, over the past decade~\cite{villamor2019high,rego2019high}. Computational solutions play a key role in dry-lab analysis of the deluge of HTS data by using efficient and fast algorithms.
 
 Genome rearrangements are mutations that alter the arrangement of genes on a genome, and usually occur in presence of errors in cell division following meiosis or mitosis. These structural abnormalities in chromosomes include, but are not limited to, deletions, duplications, translocations, inversions and insertions, and mostly occur as an accident in the sperm or egg cell, and hence are present in every cell of the body~\cite{hartmann2018genome,gardner2018gardner}.
 
 Study on chromosomal aberrations, which underlie many genetic diseases and cancer, is crucial for diagnostics, prognostics and targeted therapeutics~\cite{theisen2010disorders}. Examples of such diseases are Wolf–Hirschhorn syndrome (WHS), that is caused by a partial deletion from human chromosome location 4p16.3~\cite{dufke2000microdeletion}, Charcot–Marie–Tooth disease (CMT), that is most commonly caused by duplication of the gene encoding peripheral myelin protein 22 (PMP22) on human chromosome 17~\cite{timmerman1992peripheral}, and acute myeloid leukemia (AML), that may be caused by translocations between human chromosome 8 and 21~\cite{huang2006acute}.
 
-We present an alignment-free method that finds chromosomal rearrangements between two DNA sequences based on their information content, which is obtained by a data compression technique. This computational solution follows a combination of probabilistic and algorithmic approaches for having a quantitative definition of information, although it can be seen as more of a probabilistic one~\cite{hosseini2019ac}. The proposed method is implemented, under the name of Smash++, and is capable of finding and visualizing informationally similar regions in an SVG image.
+We present an alignment-free method that finds chromosomal rearrangements between two DNA sequences based on their information content, which is obtained by a data compression technique. This computational solution follows a combination of probabilistic and algorithmic approaches for having a quantitative definition of information, although it can be seen as more of a probabilistic one~\cite{hosseini2019ac}. The proposed method is implemented, under the name of Smash++, and is capable of finding and visualizing as SVG images informationally similar regions in two sequences.
 
 Smash++ is an improved version of Smash~\cite{pratas2015alignment}, featuring (1)~improved accuracy, that is using multiple context models to find fine-grained along with coarse-grained chromosomal rearrangements, (2)~presenting complexity (redundancy) and relative redundancy of informationally similar regions in DNA sequences, (3)~improved user interface (UI), both in command line and resulting SVG image, and (4)~improved performance, in terms of time and memory usage.
 
-
-\subsection{Figures and Tables}
-If you have a very wide table or figure, you can use \texttt{sidewaystable} or \texttt{sidewaysfigure}, as in Table \ref{tab:example:sideways}: this will be rotated sideways and occupy a \emph{single column} on its own.
-
-If your table or figure is both wide and tall (so it wouldn't fit well in a single column with \texttt{sidewaystable} or \texttt{figure}), 
-you can use \verb|table| or \verb|figure| inside a \verb|landscape| environment for a full-page landscaped alternative. A page break will be inserted \emph{immediately before and after} the \verb|landscape| environment (Table \ref{tab:example:landscape}), so you'll need to carefully position it in a suitable location in your manuscript.
-
-% \begin{figure}[bt!] %% preferably at bottom or top of column
-% \centering
-% \includegraphics[width=\linewidth]{example-image}
-% \caption{An example figure}\label{fig:example}
-% \end{figure}
-
-% \begin{table}[bt!]
-% \caption{An example table.}\label{tab:example}
-% \begin{tabular}{l r l}
-% \toprule
-% Item & Quantity & Notes\\
-% \midrule
-% Widgets & 42 & Over-supplied\textsuperscript{*} \\
-% Gadgets & 13 & Under-supplied \\
-% \bottomrule
-% \end{tabular}
-% \begin{tablenotes}
-% \item This is a table note.
-% \item \textsuperscript{*}Another note.
-% \end{tablenotes}
-% \end{table}
+In the following sections we first describe the proposed method in detail, including data modelling, finding similar regions and computing complexity. Then, we describe the datasets that are used in different experiments and how they can be accessed. Next, we provide details of the experiments carried out on the datasets along with findings based on their analysis. Source codes are publicly available under GNU GPL v3 license and also, the datasets are available on public repositories for download and use. Finally, we provide conclusions and discussion.
 
 
-\subsection{Some Mathematics Sample}
+% \section{Data Description}
 
-Let $X_1, X_2, \ldots, X_n$ be a sequence of independent and identically distributed random variables with $\text{E}[X_i] = \mu$ and $\text{Var}[X_i] = \sigma^2 < \infty$, and let
-%
-\begin{equation}
-S_n = \frac{X_1 + X_2 + \cdots + X_n}{n}
-      = \frac{1}{n}\sum_{i}^{n} X_i
-\end{equation}
-%
-denote their mean. Then as $n$ approaches infinity, the random variables $\sqrt{n}(S_n - \mu)$ converge in distribution to a normal $\mathcal{N}(0, \sigma^2)$.
+% A statement providing background and purpose for collection of these data should be presented for readers without specialist knowledge in that area. A brief description of the protocol for data collection, data curation and quality control, as well as potential uses should be included, as well as outlining how the data can be accessed if it is not deposited in our repository.
 
 
-\section{Background}
-\label{sec:background}
+% \section{Discussion}
 
-The background section should be written in a way that is accessible to researchers without specialist knowledge in that area and must clearly state---and, if helpful, illustrate---the background to the research and its aims. The section should end with a brief statement of what is being reported in the article.
-
-
-\section{Data Description}
-
-A statement providing background and purpose for collection of these data should be presented for readers without specialist knowledge in that area. A brief description of the protocol for data collection, data curation and quality control, as well as potential uses should be included, as well as outlining how the data can be accessed if it is not deposited in our repository.
-
-% \begin{figure*}%[b!]  %% Add a [b!] if you prefer the wide image to be at the bottm of the page
-% \centering
-% \includegraphics[width=.7\textwidth]{example-image}
-% \caption{An example wide figure. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-% }\label{fig:example:wide}
-% \end{figure*}
-
-
-\section{Analyses}
-
-This section should provide details of all of the experiments and analyses that are required to support the conclusions of the paper. The authors should make clear the goal of each analysis and state the basic findings.
-
-
-% \begin{table*}[bt!]
-% \caption{Automobile land speed records (GR 5-10)}\label{tab:example:wide}
-% % Use "S" column identifier (from siunitx) to align on decimal point.
-% % Use "L", "R" or "C" column identifier for auto-wrapping columns with tabularx.
-% \begin{tabularx}{\linewidth}{S l l l r L}
-% \toprule
-% {Speed (mph)} & {Driver} & {Car} & {Engine} & {Date} & {Extra comments}\\
-% \midrule
-% 407.447     & Craig Breedlove & Spirit of America          & GE J47    & 8/5/63  & (Just to demo a full-width table with auto-wrapping long lines) \\
-% 413.199     & Tom Green       & Wingfoot Express           & WE J46    & 10/2/64  \\
-% 434.22      & Art Arfons      & Green Monster              & GE J79    & 10/5/64  \\
-% 468.719     & Craig Breedlove & Spirit of America          & GE J79    & 10/13/64 \\
-% 526.277     & Craig Breedlove & Spirit of America          & GE J79    & 10/15/65 \\
-% 536.712     & Art Arfons      & Green Monster              & GE J79    & 10/27/65 \\
-% 555.127     & Craig Breedlove & Spirit of America, Sonic 1 & GE J79    & 11/2/65  \\
-% 576.553     & Art Arfons      & Green Monster              & GE J79    & 11/7/65  \\
-% 600.601     & Craig Breedlove & Spirit of America, Sonic 1 & GE J79    & 11/15/65 \\
-% 622.407     & Gary Gabelich   & Blue Flame                 & Rocket    & 10/23/70 \\
-% 633.468     & Richard Noble   & Thrust 2                   & RR RG 146 & 10/4/83  \\
-% 763.035     & Andy Green      & Thrust SSC                 & RR Spey   & 10/15/97\\
-% \bottomrule
-% \end{tabularx}
-%
-% \begin{tablenotes}
-% \item Source is from this website: \url{https://www.sedl.org/afterschool/toolkits/science/pdf/ast_sci_data_tables_sample.pdf}
-% \end{tablenotes}
-% \end{table*}
-
-
-\section{Discussion}
-
-The discussion should spell out the major conclusions and interpretations of the work, including some explanation on the importance and relevance of the dataset and analysis. It should not be restatement of the analyses done and their basic conclusions. The discussion section can end with a concluding paragraph that clearly states the main conclusions of the research along with directions for future work. Summary illustrations can be included.
+% The discussion should spell out the major conclusions and interpretations of the work, including some explanation on the importance and relevance of the dataset and analysis. It should not be restatement of the analyses done and their basic conclusions. The discussion section can end with a concluding paragraph that clearly states the main conclusions of the research along with directions for future work. Summary illustrations can be included.
 
 % \begin{sidewaystable}
 % \caption{Automobile land speed records (GR 5-10). This is the same table as before, but rotated sideways.}
@@ -212,19 +126,12 @@ The discussion should spell out the major conclusions and interpretations of the
 % \end{sidewaystable}
 
 
-\section{Potential implications}
-
-Authors should provide some additional comments about potential, more broad-ranging implications of their work that are not directly related to the current focus of their manuscript. This section is meant to promote discussion on possible ways the findings or data presented might be used in or have a relationship with other areas of research that may not be directly apparent in the work. It is not meant to provide `proof of importance' of the work. Only to engender expansion of use to other areas. 
-
-Explicit personal opinions by the authors are permitted, but they should be made clear as such. References or related information to support the propositions should be included. These section should focus on work that can be done within the foreseeable future and specifically using the information within the manuscript, not provide speculation on how it will relate to far-reaching goals of the research area.
-
-
 \section{Methods} \label{sec.methods}
 The schema of the proposed method is illustrated in Figure~\ref{fig.schema}. Smash++ takes as inputs a reference and a target file and produces as output a position file, which is then fed to the Smash++ visualizer to produce an SVG image. This process has eight major stages: (1)~compression of the original target file, based on the model of original reference file, (2)~filtering and segmentation of the compressed file, (3)~reference-free compression of the segmented files, obtained by the previous stage, (4)~compression of the original reference file, based on the model of segmented files obtained by stage~2, (5)~filtering and segmentation of the compressed files, (6)~reference-free compression of the segmented files, that are obtained by the stage~5, (7)~aggregating positions, generated by stages~3 and~6, and (8)~visualizing the positions. The following sections describe the process in detail.
 
 \begin{figure*}[!t]
   \centering
-  \includegraphics[width=.9\linewidth]{schema.pdf}
+  \includegraphics[width=.95\linewidth]{schema.pdf}
   \caption{The schema of Smash++. The process of finding similar regions in reference and target sequences and also, computing redundancy in each region includes eight stages. Finally, Smash++ outputs a *.pos file that includes the positions of the similar regions, and can be then visualized, resulting in an SVG image.}
   \label{fig.schema}
 \end{figure*}
@@ -481,19 +388,14 @@ Smash++ and several other methods have been carried out on a collection of synth
 % Authors benefit greatly by posting their methods in protocols.io as these are in a formatted form, allow inclusion of all the details, are fully searchable unlike supplementary files, and can be updated to new versions as basic methodology changes over time. Doing this saves authors extensive time in the future as the methods do not need to be rewritten in future manuscripts as they need only be cited.
 
 \section{Availability of source code and requirements}
-
-Lists the following:
 \begin{itemize}
-\item Project name: e.g.~My bioinformatics project
-\item Project home page: e.g.~\url{http://sourceforge.net/projects/mged}
-\item Operating system(s): e.g.~Platform independent
-\item Programming language: e.g.~C++
-\item Other requirements: e.g.~C++ 11 or higher, Tomcat 4.0 or higher
-\item License: e.g.~GNU GPL, FreeBSD etc.
-Any restrictions to use by non-academics: e.g. licence needed
+\item Project name: Smash++
+\item Project home page: \url{https://github.com/smortezah/smashpp}
+\item Operating system(s): Linux, macOS, Windows
+\item Programming language: C++, Python
+\item Other requirements: C++ 11 or higher
+\item License: GNU GPL v3
 \end{itemize}
-
-This needs to be under an \href{http:/opensource.org/licenses}{Open Source Initiative} approved license where practicable compiled running software is made available. If the code is not hosted in a repository the \href{https://github.com/gigascience}{\textit{GigaScience} GitHub repository} is also available for this purpose.
 
 \section{Availability of supporting data and materials}
 
