--- a/paper/main.tex
+++ b/paper/main.tex
@@ -375,7 +375,7 @@ This example shows the distinction between a finite-context model and a substitu
 \end{table*}
 
 \section{Results} \label{sec.results}
-Smash++ and several other methods have been carried out on a collection of synthetic and real sequences. The machine used for the tests had an 8-core 3.40~GHz Intel\textsuperscript{\textregistered} Core{\texttrademark} i7-6700 CPU and 32~GB of RAM.
+Smash++ and several other methods have been carried out on a collection of synthetic and real sequences. The machine used for the tests had a 4-core 3.40~GHz Intel\textsuperscript{\textregistered} Core{\texttrademark} i7-6700 CPU and 32~GB of RAM.
 
 \begin{figure*}[!h]
   \centering
